# mariners-ai-grid

./: .env.example  .gitignore  .npmrc  APP_STORE_METADATA.md  App.tsx  GEMINI.md  PROJECT_STATUS.md  RC_CHECKLIST.md  README.md  SQLITE_VEC_EVIDENCE.md  WARP.md  app.config.js  app.json  app.json.backup  conductor-setup.yaml  eas.json  global.css  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  sbom.json  tailwind.config.js  tech-stack.md  vitest.config.ts
.claude/: settings.local.json
assets/app.icon/: Contents.json
assets/seeds/: current.seed.zst
conductor/: ALIGNMENT_REVIEW.md  DATA_ACCESS.md  ECMWF_9KM_QUICKSTART.md  ECMWF_QUICK_REFERENCE.md  ECMWF_S3_ACCESS.md  ICON_SETUP.md  README.md  compile_proto.py  compile_proto_ts.py  ecmwf_downloader.py  fidelity_check.py  generate_assets.py  generate_wind_barbs.py  ingest_cron.py  monitor_seeds.py  openmeteo_client.py  pyproject.toml  slicer.py  tech-stack.md
conductor/demo_seeds/: ifs_hres_2026011912.seed.zst  mock_a9cafafcfcb1_2026011812.parquet  mock_a9cafafcfcb1_2026011812.seed.zst  mock_a9cafafcfcb1_2026011900.parquet  mock_a9cafafcfcb1_2026011900.seed.zst
conductor/demo_seeds/.cache/: ifs_hres_876fe5820c57.grib2.5b7b6.idx
conductor/functions/: __init__.py  requirements.txt  slicer_function.py  test_payloads.py
conductor/output/: mock_92de9dedde87_2026011900.seed.zst  mock_aifs-ens_92de9dedde87_2026011900.seed.zst  mock_aifs_92de9dedde87_2026011900.seed.zst  mock_ifs_92de9dedde87_2026011900.seed.zst
conductor/output/.cache/: 92de9dedde87_2026011900_24_032ba1f5.json  92de9dedde87_2026011900_24_032ba1f5.npz
conductor/schema/: weather_seed.proto  weather_seed_pb2.py  weather_seed_pb2.pyi
conductor/slicer/: __init__.py  aifs.py  cli.py  compression.py  core.py  cost_model.py  export.py  ifs.py  quantization_config.py  s3_provider.py  variables.py
conductor/test_seeds/: atlantic_arc_route.json  coastal_california.json  coastal_california.parquet  hawaii_approach_route.json  hawaii_approach_route.seed.zst  high_latitude_alaska.json  high_latitude_alaska.seed.zst  iridium_minimal.json  iridium_minimal.seed.zst  near_dateline.json  near_dateline.seed.zst  pacific_crossing_midpoint.json  pacific_crossing_midpoint.seed.zst
conductor/tests/: __init__.py  test_aifs.py  test_aifs_robustness.py  test_compression.py  test_dateline.py  test_e2e_pipeline.py  test_ecmwf_access.py  test_ecmwf_s3.py  test_opendata_lib.py  test_slicer.py  test_slicer_integration.py
plugins/: withMarinerOptimizations.js
scripts/: MockNMEAStreamer.ts  SeedUploader.ts  TestHeartbeat.ts  deploy-mag.sh  deploy_fleet.sh  generate_sbom.ts  seed_server.py  simulate_ux.ts  test_ecmwf_curl.sh  test_seed_server.ts  test_transfer.ts  verify_divergence_logic.ts  verify_offline_cop.ts  verify_seed_integrity.ts
(+68 files in other folders)
